@@ -628,6 +628,48 @@ public class FieldInfos implements Iterable<FieldInfo> {
           isSoftDeletesField);
     }
 
+    synchronized void setDocValuesType(int number, String name, DocValuesType dvType) {
+      verifyConsistent(number, name, dvType);
+      docValuesType.put(name, dvType);
+    }
+
+    synchronized void verifyConsistent(Integer number, String name, DocValuesType dvType) {
+      if (name.equals(numberToName.get(number)) == false) {
+        throw new IllegalArgumentException(
+            "field number "
+                + number
+                + " is already mapped to field name \""
+                + numberToName.get(number)
+                + "\", not \""
+                + name
+                + "\"");
+      }
+      if (number.equals(nameToNumber.get(name)) == false) {
+        throw new IllegalArgumentException(
+            "field name \""
+                + name
+                + "\" is already mapped to field number \""
+                + nameToNumber.get(name)
+                + "\", not \""
+                + number
+                + "\"");
+      }
+      DocValuesType currentDVType = docValuesType.get(name);
+      if (dvType != DocValuesType.NONE
+          && currentDVType != null
+          && currentDVType != DocValuesType.NONE
+          && dvType != currentDVType) {
+        throw new IllegalArgumentException(
+            "cannot change DocValues type from "
+                + currentDVType
+                + " to "
+                + dvType
+                + " for field \""
+                + name
+                + "\"");
+      }
+    }
+
     synchronized Set<String> getFieldNames() {
       return Set.copyOf(nameToNumber.keySet());
     }
@@ -708,6 +750,26 @@ public class FieldInfos implements Iterable<FieldInfo> {
       final FieldInfo curFi = fieldInfo(fi.getName());
       if (curFi != null) {
         curFi.verifySameSchema(fi, globalFieldNumbers.strictlyConsistent);
+
+        if (!globalFieldNumbers.strictlyConsistent) {
+          // For the not strictly consistent case (legacy index), we may need to merge the
+          // FieldInfo instances
+          FieldInfo updatedFieldInfo = curFi.handleLegacySupportedUpdates(fi);
+          if (updatedFieldInfo != null) {
+            if (curFi.getDocValuesType() == DocValuesType.NONE
+                && updatedFieldInfo.getDocValuesType() != DocValuesType.NONE) {
+              // Must also update docValuesType map so it's
+              // aware of this field's DocValuesType.  This will throw IllegalArgumentException if
+              // an illegal type change was attempted.
+              globalFieldNumbers.setDocValuesType(
+                  updatedFieldInfo.number,
+                  updatedFieldInfo.getName(),
+                  updatedFieldInfo.getDocValuesType());
+            }
+            // Since the FieldInfo changed, update in map
+            byName.put(fi.getName(), updatedFieldInfo);
+          }
+        }
         if (fi.attributes() != null) {
           fi.attributes().forEach((k, v) -> curFi.putAttribute(k, v));
         }
